@@ -1,0 +1,11 @@
+There is no documentation included in the snapshot archives.
+
+You can download the full documentation archive at:
+
+http://sdcc.sourceforge.net/snapshot/docs/sdcc.doc.tar.gz
+
+
+For Windoze character set and line ending:
+
+http://sdcc.sourceforge.net/snapshot/docs/sdcc-doc.zip
+
